[project]
name = "aacircuit"
version = "0.0.1"
authors = [
  { name="blokkendoos", email="jvo@chaosgeordend.nl" },
]
requires-python = ">=3.10"
dependencies = [
  "PyGObject",
  "bresenham",
  "platformdirs",
  "pycairo",
  "pyclip",
  "pypubsub",
]

[project.gui-scripts]
aacircuit = "application.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "application",
]
